--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tinymce/tinymce-react": "^6.3.0",
     "antd": "^5.28.1",
     "axios": "^1.13.2",
+    "html-react-parser": "^5.2.10",
     "less": "^4.4.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
