--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "html-react-parser": "^5.2.10",
     "less": "^4.4.2",
     "react": "^19.2.0",
+    "react-captcha-code": "^1.0.7",
     "react-dom": "^19.2.0",
     "react-router": "^7.9.5",
     "zustand": "^5.0.8"
