--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.2.0",
     "react-captcha-code": "^1.0.7",
     "react-dom": "^19.2.0",
+    "react-fitty": "^1.0.1",
     "react-router": "^7.9.5",
     "zustand": "^5.0.8"
   },
