--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "react-captcha-code": "^1.0.7",
     "react-dom": "^19.2.0",
     "react-fitty": "^1.0.1",
+    "react-markdown": "^10.1.0",
     "react-router": "^7.9.5",
+    "react-syntax-highlighter": "^16.1.0",
+    "remark-gfm": "^4.0.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
