--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router": "^7.9.5",
     "react-syntax-highlighter": "^16.1.0",
     "remark-gfm": "^4.0.1",
+    "use-immer": "^0.11.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
